cluster/infra/argocd-config/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-basic-auth
  namespace: argocd
spec:
  basicAuth:
    secret: argocd-basic-auth
