cluster/infra/argocd-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "ArgoCD"
    gethomepage.dev/icon: argo-cd.svg
    gethomepage.dev/href: https://argocd.disablak.xyz
    gethomepage.dev/group: Apps
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=argocd-server"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.disablak.xyz
      secretName: argocd-tls
  rules:
    - host: argocd.disablak.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
